server/vm-k8s/k8s/base/ttrss/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ttrss
  labels:
    app: ttrss
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: ttrss
---
apiVersion: v1
kind: Service
metadata:
  name: ttrss-mysql
  labels:
    app: ttrss-mysql
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None
  selector:
    app: ttrss-mysql
